--- a/mamamia-massas/index.html
+++ b/mamamia-massas/index.html
@@ -1,16 +1,16 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mamamia Massas</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="src/main.jsx"></script>
-</body>
-
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mamamia Massas  Restaurante </title>
+  </head>
+  <body>
+    <div id="root">
+      <!-- aqui será renderizada a nossa aplicação -->
+    </div>
+    <!-- script que inicializa o React é invocado -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
